# Raj_en_nllb200_meta_model

./: README.md  app.py  back_translate.py  build_corpus.py  evaluate.py  evaluate_lora.py  finetune_nllb.py  finetune_nllb_lora.py  labse_filter.py  main.py  predictions.txt  prepare_dataset.py  pyproject.toml  split_dataset.py  zero_shot_translate.py
data_final/: train.eng  train.raj
